[gd_scene load_steps=5 format=3 uid="uid://b36ac7n8lqaxj"]

[ext_resource type="Script" path="res://data/scenes/viewport_2d_scene.gd" id="1_ef7th"]
[ext_resource type="Texture2D" uid="uid://bg03nblp7fmoc" path="res://icon.svg" id="2_qqs2e"]
[ext_resource type="Texture2D" uid="uid://bdqx8dfm4v7gj" path="res://data/textures/dot_01.png" id="3_wi8ij"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rnr7n"]
blend_mode = 1
light_mode = 1

[node name="viewport_2d_scene" type="Node2D"]
script = ExtResource("1_ef7th")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 2048.0
offset_bottom = 2048.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1024, 1024)
rotation = 0.785398
scale = Vector2(20, 20)
texture = ExtResource("2_qqs2e")

[node name="dot_sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.435294)
material = SubResource("CanvasItemMaterial_rnr7n")
position = Vector2(-52, -46.9999)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_wi8ij")

[node name="target_indicator_sprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.737255, 0.0117647, 1)
position = Vector2(-52, -46.9999)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_wi8ij")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(2048, 2048)
scale = Vector2(50, 50)
